c2prj1_cards/grade.txt
Grading at Fri Dec 20 19:24:11 UTC 2019
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:74:14: error: ‘temp.value’ is used uninitialized in this function [-Werror=uninitialized]
       if(temp.value>='0' || temp.value<='9'){
              ^
cards.c:74:33: error: ‘temp.value’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       if(temp.value>='0' || temp.value<='9'){
                                 ^
cards.c:75:12: error: ‘temp.value’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  temp.value-='0';
            ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
